@@ -50,6 +50,9 @@
   the measurement output.
 - Added SCOREP_CUDA_ENABLE option 'references' to track references between
   CUDA host and device activities in the OTF2 trace.
+- The measurement configuration (stored in the file `scorep.cfg') is
+  now also preserved in the experiment directory in case of an failed
+  measurement.
 
 ------------------- Upcoming version 1.2.3 ---------------------------
 
